D1：資料介紹與評估資料

--- a/homework/Day_001_HW.ipynb
+++ b/homework/Day_001_HW.ipynb
@@ -4,42 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "作業1：\n",
+    "#  作業1：\n",
     "\n",
     "請上 Kaggle, 在 Competitions 或 Dataset 中找一組競賽或資料並寫下：Trending YouTube Video Statistics\n",
     "\n",
-    "1. 你選的這組資料為何重要\n",
-    "   這是YouTube各地區發燒影片的每日記錄，可以從中找出發燒影片的共同特徵，加強自己的影片的散播能力。\n",
-    "    \n",
-    "2. 資料從何而來 (tips: 譬如提供者是誰、以什麼方式蒐集)\n",
-    "   透過YouTube API蒐集而來、格式化表單。\n",
-    "\n",
-    "3. 蒐集而來的資料型態為何\n",
-    "   結構化表格，.csv。\n",
-    "\n",
-    "4. 這組資料想解決的問題如何評估\n",
-    "   根據留言和統計資訊對YouTube影片進行分類、分析哪些因素會影響YouTube影片的受歡迎程度。"
+    "    1. 你選的這組資料為何重要?\n",
+    "        這是YouTube各地區發燒影片的每日記錄，可以從中找出發燒影片的共同特徵，加強自己的影片的散播能力。\n",
+    "        \n",
+    "    2. 資料從何而來? (tips: 譬如提供者是誰、以什麼方式蒐集)\n",
+    "        透過YouTube API蒐集而來、格式化表單。\n",
+    "        \n",
+    "    3. 蒐集而來的資料型態為何?\n",
+    "        結構化表格，.csv。\n",
+    "        \n",
+    "    4. 這組資料想解決的問題如何評估?\n",
+    "        根據留言和統計資訊對YouTube影片進行分類、分析哪些因素會影響YouTube影片的受歡迎程度。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "作業2：\n",
+    "# 作業2：\n",
     "\n",
     "想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案：\n",
     "\n",
-    "1. 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」)\n",
-    "   假設服務品質會影響載客量，載客量越高則業績越高，則如何提升服務品質(各種服務品質因素對載客量的影響)。\n",
-    "\n",
-    "2. 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集)\n",
-    "   叫車app、網頁、語音紀錄蒐集。\n",
-    "\n",
-    "3. 蒐集而來的資料型態為何\n",
-    "   結構化表格。\n",
-    "\n",
-    "4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)\n",
-    "   各種服務品質因素(車輛種類、車輛內裝、車輛整潔、司機素質、開車舒適度等)和載客量的關係。\n",
+    "    1. 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」)\n",
+    "       假設服務品質會影響載客量，載客量越高則業績越高，則如何提升服務品質(各種服務品質因素對載客量的影響)。\n",
+    "       \n",
+    "    2. 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集)\n",
+    "       叫車app、網頁、語音紀錄蒐集。\n",
+    "       \n",
+    "    3. 蒐集而來的資料型態為何\n",
+    "       結構化表格。\n",
+    "       \n",
+    "    4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)\n",
+    "       各種服務品質因素(車輛種類、車輛內裝、車輛整潔、司機素質、開車舒適度等)和載客量的關係。\n",
     "    "
    ]
   },
@@ -47,13 +47,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "作業3：\n",
+    "# 作業3：\n",
     "\n",
-    "請點選下方檢視範例依照 Day_001_example_of_metrics.ipynb 完成 Mean Squared Error 的函式\n",
-    "\n",
-    "資料夾結構建立規則提醒：2nd-ML100Days > data資料夾 & homework資料夾 (ipynb檔) \n",
-    "\n",
-    "(請注意data的存放位置，建議放在*.ipynb 同一個目錄下，這樣才能在不修改code的情況下正常執行)"
+    "    請點選下方檢視範例依照 Day_001_example_of_metrics.ipynb 完成 Mean Squared Error 的函式\n",
+    "    資料夾結構建立規則提醒：2nd-ML100Days > data資料夾 & homework資料夾 (ipynb檔) \n",
+    "    (請注意data的存放位置，建議放在*.ipynb 同一個目錄下，這樣才能在不修改code的情況下正常執行)"
    ]
   },
   {
