D4：EDA: 欄位的資料類型介紹及處理

--- a/homework/Day_004_HW.ipynb
+++ b/homework/Day_004_HW.ipynb
@@ -17,7 +17,7 @@
     "B、這三個問題在參考程式碼範例(請點選下方檢視範例Day_004_column_data_type.ipynb)都會實現，第三個問題會更為複雜一些，簡單來說我們有兩種方法來處理類別型資料\n",
     "    - Label encoding: 把每個類別 mapping 到某個整數，不會增加新欄位\n",
     "    - One Hot encoding: 為每個類別新增一個欄位，用 0/1 表示是否\n",
-    "![title](large.png)\n",
+    "![Image of Yaktocat](https://ai100-fileentity.cupoy.com/2nd/homework/D4/1555562338544/large)\n",
     "\n",
     "C、作業1：請詳細閱讀label-encoder-vs-one-hot-encoder (https://medium.com/@contactsunny/label-encoder-vs-one-hot-encoder-in-machine-learning-3fc273365621) （英文）\n",
     "\n",
